# bevy-jam-2

./: Cargo.toml  README.md  shell.nix
.github/workflows/: release.yaml
assets/sound/: credits.txt
src/: assets.rs  audio.rs  collision.rs  crab.rs  main.rs  plane.rs  player.rs  spawner.rs
