[package]
name = "bevy-jam-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = "0.12"
bevy_egui = "0.15"
bevy-inspector-egui = "0.12"
bevy_turborand = "0.3.0"
bevy_prototype_lyon = "0.6.0"
itertools = "*"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
